Commit al master blogpost, cambios en diseño css

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,33 @@ body {
     padding: 20px;
     margin: 0;
     text-align: center;
-    background-color: aliceblue;
+    background-color: #F9F9F9;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 18px;
+}
+
+h1 {
+    color: black;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+p {
+    padding: 15px 15px;
+    margin: 0;
+    color:whitesmoke;
+    font-family: Arial, Helvetica, sans-serif;
+    z-index: 1;
+    text-align: left;
+}
+
+.container_content {
+    padding: 0;
+    max-width: 900px;
+    height: 100vh;
+    flex: 1;
+    margin: 10px auto;
+    background-color: #0e0e0e;
+    opacity: .7;
+    border: 5px black solid;
 }
