--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ p {
     color:whitesmoke;
     font-family: Arial, Helvetica, sans-serif;
     z-index: 1;
-    text-align: left;
+    text-align: justify;
 }
 
 .container_content {
