--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ h1 {
 p {
     padding: 15px 15px;
     margin: 0;
-    color:gray;
+    color:rgb(46, 46, 46);
     font-family: Arial, Helvetica, sans-serif;
     z-index: 1;
     text-align: justify;
