--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     padding: 0;
     margin: 0;
     text-align: center;
-    background-color: #F9F9F9;
+    background-color: #fcfbed;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 18px;
 }
