--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     padding: 0;
     margin: 0;
     text-align: center;
-    background-color: #fcfbed;
+    background-color: #ffffff;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 18px;
 }
@@ -33,16 +33,28 @@ span {
     margin: 0 auto;
     max-width: 900px;
     flex: 1;
-    padding: 20px 0;
-    background-color: teal;
+    padding: 0;
+    background-color: #edf6f9;
     color: whitesmoke;
-    justify-content: center;
-    box-shadow: 0px 1px 20px 0px rgba(0, 0, 0, .3);
+    justify-content: left;
+    align-items: center;
+    box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, .2);
+}
+
+.header__container-img {
+    width: 100%;
+    height: auto;
+    max-width: 60px;
+    min-width: 40px;
+    padding-left: 10px;
+    color: white;
 }
 
 .header__h2 {
     font-size: 1.5rem;
     margin: 0;
+    padding: 0;
+    color: #370617;
 }
 .container_content {
     padding: 0;
