--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,9 @@ footer {
     opacity: .7;
     border: 1px black solid;
 }
+
+.figure__container-img {
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+}
